package message.peer;

import "common.proto";

option java_package = "com.leonc.zodiac.aquarius.base.message";
option java_outer_classname = "MsgPeer";

option optimize_for = SPEED;

message PeerRegister {
    optional string nodeType = 1;
    optional string listenIp = 2;
    optional int32 listenPort = 3;
}

message PeerRegisterResponse
{
    optional common.ResponseStatus status = 1;
    optional string yourNodeId = 2;
    optional string myNodeId = 3;
}

message PeerUnRegister {
    //no msg body
}

// message PeerUnRegisterResponse {
//     //no msg body
// }

message PeerInfo
{
    optional string nodeId = 1;
    optional string nodeType = 2;
    optional string listenIp = 3;
    optional int32 listenPort = 4;
}

message FetchPeerList {
    //no msg body
}

message FetchPeerListResponse {
    optional common.ResponseStatus status = 1;
    repeated PeerInfo peer = 2;
}

message PeerJoin {
    optional PeerInfo info = 1;
}

message PeerJoinResponse {
    optional string nodeId = 1;
}

message PeerLeave {
    //no msg body
}

// message PeerQuitResponse {
//     //no msg body
// }